--- a/TicTacToeWithLineAnimation/Base.lproj/Main.storyboard
+++ b/TicTacToeWithLineAnimation/Base.lproj/Main.storyboard
@@ -100,10 +100,11 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xz0-ka-i4J">
-                                        <rect key="frame" x="143" y="72" width="75" height="35"/>
+                                        <rect key="frame" x="157" y="72" width="48" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="OK"/>
                                         <connections>
                                             <action selector="closeInfoView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RpV-xG-FKr"/>
                                         </connections>
@@ -111,6 +112,7 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
+                                    <outlet property="okButton" destination="xz0-ka-i4J" id="cgP-tb-sMH"/>
                                     <outlet property="textLabel" destination="waT-5k-zCL" id="w9C-Cr-7te"/>
                                 </connections>
                             </view>
